PureFun/PureFunOof/PureFun-fe/src/test/resources/parser/Invalid/Global_Variables_no_eq.pf
module Binary{

    a Int 34

}